css/styles.css
/* global */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
a {
    text-decoration: none;
}
.playfair-serif {
    font-family: 'Playfair Display', serif;
}
.normal {
    font-weight: normal;
}
.light {
    font-weight: lighter;
}
.bold {
    font-weight: bold;
}
.oswald-sans {
    font-family: 'Oswald', sans-serif;
}
.open-sans {
    font-family: 'Open Sans', sans-serif;
}
.p-text {
    font-size: 14px;
    line-height: 1.7;
    letter-spacing: 1px;
}
.cursor-pointer:hover {
    cursor: pointer;
}
.overflow-hidden {
    overflow: hidden;
}
html, body {
    max-width: 100%;
    overflow-x: hidden;
}
.grid-wrap {
    overflow: hidden;
    grid-template-columns: repeat(12, 1fr);
    grid-auto-rows: minmax(20px, auto);
}
.flex {
    display: flex;
}
.test {
    border: solid 1px red;
}
.vertical-center {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}
.horizontal-center {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}
.horizontal-center2 {
    margin: 0 auto;
}
.center-all {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.container-lg {
    width: 90%;
    margin: 0 auto;
}
.container-sm {
    width: 80%;
    margin: 0 auto;
}
.container-md {
    width: 85%;
    margin: 0 auto;
}
.z-index1 {
    z-index: 1;
}
.z-index2 {
    z-index: 2;
}
.text-white {
    color: #fff !important;
}
.text-blue {
    color: #00cbd8;
}
.text-gray {
    color: #666;
}
.text-center {
    text-align: center;
}
.text-right {
    text-align: right;
}
.text-left {
    text-align: left;
}
.btn {
    font-family: 'Oswald', sans-serif;
    padding-top: 0.7em;
    padding-bottom: 0.7em;
    letter-spacing: 1px;
    text-decoration: none;
    border: 0;
}
.btn-blue {
    font-family: 'Oswald', sans-serif;
    background-color: #00cbd8;
    color: #fff;
    padding: 0.5em;
    letter-spacing: 1px;
}
.btn-blue2 {
    background-color: #00cbd8;
    color: #fff;
}
.btn-white {
    background-color: #fff;
    color: #000;
    border: 1px solid #cdcdcd;
}
.btn-black {
    background-color: #000;
    color: #fff;
}
.divider {
    background-color: #333;
    width: 250px;
    height: 1px;
    margin: 0 auto;
    margin-bottom: 40px;
}
.divider:after {
    content: "";
    background-color: #00cbd8;
    width: 70px;
    height: 4px;
    margin: 0 auto;
    display: block;
    transform: translateY(-40%);
}
.title {
    font-family: 'Playfair Display', serif;
    font-weight: lighter;
    font-style: italic;
    font-size: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
}
.img {
    width: 100%;
    object-fit: cover;
}
.img-temp {
    background-color: #e3e3e3;
}
.input {
    padding: 6px 12px;
    border-radius: 4px;
    border: 1px solid #ccc;
    font-family: 'Open Sans', sans-serif;
    color: #555;
    font-size: 14px;
}
.focused:focus {
    border: 1px solid #66afe9;
    outline: none;
    -webkit-box-shadow: 0px 0px 12px -2px rgba(199,199,199,1);
    -moz-box-shadow: 0px 0px 12px -2px rgba(199,199,199,1);
    box-shadow: 0px 0px 12px -2px rgba(199,199,199,1);
}
.input::placeholder {
    font-size: 14px;
}
.back-to-top {
    width: 50px !important;
    height: 50px;
    background: #00cbd8 url("../images/up.png") center center;
    background-repeat: no-repeat;
    position: fixed;
    bottom: 5px;
    right: -50px;
    transition: 0.25s all;
    z-index: 999;
    display: block;
}

/* header */
header {
    height: 70px;
    background-color: transparent;
    top: 20px;
    position: fixed;
    z-index: 9999;
    width: 100%;
    transition: 0.5s all;
    top: 0px;
}
header .logo {
    color: #fff;
}
header .logo span {
    position: absolute;
    top: 45%;
    left: 40px;
    transform: translateY(-50%);
    padding-left: 5px;
    width: 150px;
    line-height: 18px;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
}
header .logo span i {
    font-style: normal !important;
}
header .logo img {
    width: 40px;
    border-radius: 50%;
}
header .header-container {
    position: relative;
    height: 100%;
}
header .menu {
    right: 0;
    background-color: transparent;
    border: none;
}
header .menu img {
    width: 25px;
}

/* nav */
.desktop-nav {
    display: none;
}
.mobile-nav {
    width: 100%;
    background-color: #fff;
    font-size: 14px;
    display: none;
}
.mobile-nav ul li {
    padding: 12px 20px;
}
.mobile-nav ul li a {
    text-decoration: none;
    color: #000;
}
.mobile-nav ul li + li {
    border-top: 1px solid #eee;
}

/* showcase */
.showcase {
    height: 100vh;
    width: 100%;
    position: relative;
    background-color: #000;
}
.showcase img {
    height: 100%;
}
.showcase .fade {
    height: 100%;
}
.showcase .fade div {
    height: 100%;
}
.showcase .fade div img {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0.3;
}
.showcase .fade div p {
    width: 100%;
}
.showcase .fade div p .first-child {
    font-size: 14px;
    font-style: italic;
}
.showcase .fade div p span {
    font-size: 30px;
    display: inline-block;
    padding-top: 2px;
    padding-bottom: 2px;
}
.showcase .fade div p .last-child {
    font-size: 20px;
}
.showcase .fade div p a {
    display: block;
    text-decoration: none;
    font-size: 12px;
    margin: 3px auto;
    width: 14em;
}
.slick-arrow {
    position: absolute;
    z-index: 99;
    top: 50%;
    transform: translateY(-50%);
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    width: 35px;
    height: 35px;
    cursor: pointer;
}
.slick-prev {
    background: url("../images/prev.png") center center;
    background-repeat: no-repeat;
    background-color: rgba(0, 0, 0, 0.8);
    border: none;
}
.slick-next {
    right: 0;
    background: url("../images/next.png") center center;
    background-repeat: no-repeat;
    background-color: rgba(0, 0, 0, 0.8);
    border: none;
}

/* main */
.main {
    background-color: #fff;
    position: relative;
}
/* ... */

